# qwen-asr-qt

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md
docs/: architecture.md  design.md  development.md  packaging.md  release-checklist.md
packaging/appimage/: README.md
scripts/: doctor.sh  download-models.sh  run-backend.sh
src/: app_controller.cpp  app_controller.h  asr_client.cpp  asr_client.h  backend_monitor.cpp  backend_monitor.h  clipboard_writer.cpp  clipboard_writer.h  global_shortcut.cpp  history_store.cpp  history_store.h  main.cpp  recording_overlay.cpp  recording_overlay.h  transcript_cleaner.cpp  transcript_cleaner.h  tray_controller.cpp  tray_controller.h  types.h  wav_recorder.cpp  wav_recorder.h
src/app/: app_controller.cpp  app_controller.h  app_settings.cpp  app_settings.h  app_state.h
src/domain/: asr_types.h  backend_contract.cpp  backend_contract.h  transcript_cleaner.cpp
src/platform/: clipboard_writer.cpp  global_shortcut.cpp  global_shortcut.h
src/services/: asr_client.cpp  asr_client.h  backend_monitor.cpp  backend_monitor.h  backend_process_manager.cpp  backend_process_manager.h  history_store.cpp  history_store.h  wav_recorder.cpp  wav_recorder.h
src/ui/: recording_overlay.cpp  tray_controller.cpp  tray_controller.h
